@@ -122,6 +122,9 @@ __thiscall LRoomTileDesc * Room::GetLRoomTileDesc(LRoomTileDesc * buffer);
 "538bdc83ec0883e4f883c404558b6b??896c24??8bec6aff68????????64a1????????505383ec605657a1????????33c5508d45??64a3????????f30f115d":
 __thiscall KColor Room::GetFloorColorAt(Vector& pos, float radius<xmm3>);
 
+"558bec6aff68????????64a1????????5081ecc8000000a1????????33c58945??53":
+__thiscall void Room::SpawnGreedModeWave(bool unusedBool);
+
 struct Room depends (EntityList, RoomDescriptor, TemporaryEffects, RailManager, KColor, ColorMod, Backdrop, Vector) {
 {{
 	inline Camera* GetCamera() { return this->_Camera; }
