@@ -346,6 +346,8 @@ ModCallbacks.MC_PRE_ITEM_TEXT_DISPLAY = 1484
 ModCallbacks.MC_GET_STATUS_EFFECT_TARGET = 1485
 ModCallbacks.MC_PRE_ENTITY_SET_COLOR = 1486
 ModCallbacks.MC_POST_ENTITY_SET_COLOR = 1487
+ModCallbacks.MC_POST_START_AMBUSH_WAVE = 1488
+ModCallbacks.MC_POST_START_GREED_WAVE = 1489
 
 AddHealthType = {
 	NONE	=	0,
